fix_link_align

--- a/src/components/TopCreators/TopCreators.module.css
+++ b/src/components/TopCreators/TopCreators.module.css
@@ -9,6 +9,7 @@
 .tc_header {
     display: flex;
     flex-direction: column;    
+    align-items: start; 
     gap: 16px;    
 }
 
